Changed position of text and align them nicely under their respective video. add padding top to body pushing down the main image into its correct position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
   font-family: 'Hind Siliguri', sans-serif;
   margin: 0;
   padding: 0;
+  padding-top: 600px;
   height: 100vh;
   box-sizing: border-box;
   background-color: white;
